--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -27,7 +27,7 @@ $fz-default:                        16px;
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
 
-$ff-placeholder:                    "Placeholder", "Arial", sans-serif;
+$ff-placeholder:                    "Roboto Condensed", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
@@ -44,12 +44,11 @@ $trans-600:                         0.6s $tf-default;
 // ---------------------------------
 
 $vp-320:                            320px;
-$vp-375:                            375px;
+$vp-767:                            767px;
 $vp-768:                            768px;
-$vp-1024:                           1024px;
-$vp-1280:                           1280px;
-$vp-1440:                           1440px;
-$vp-1920:                           1920px;
+$vp-1365:                           1365px;
+$vp-1366:                           1366px;
+
 
 // Retina
 // ---------------------------------
