Добавил стили в header

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,9 @@
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
 
+//header
+@import "blocks/header/header";
+
 // ---------------------------------
 
 // ❗❗❗ запрещено использовать изображения в css, касается как jpg \ png, так и svg
