--- a/source/sass/blocks/header/header.scss
+++ b/source/sass/blocks/header/header.scss
@@ -1,11 +1,40 @@
 .header {
   background: linear-gradient(90deg,#1c3477 0,#1c3477 .01%,#1a3578 39.11%,#73184b 75.5%,#b4022a 100%);
   color: $color-default-white;
-  font-family: "Roboto Condensed" "Arial", sans-serif;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
+  padding-bottom: 120px;
+
+  @include vp-1365 {
+    padding-bottom: 100px;
+  }
+
+  @include vp-767 {
+    padding-bottom: 70px;
+  }
 }
 
 .header__navigation {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.header__contact-phone{
+  color: inherit;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 26px;
+
+  @include vp-1365 {
+    font-size: 24px;
+    line-height: 24px;
+  }
+
+  @include vp-767 {
+    font-size: 22px;
+    line-height: 22px;
+  }
 }
