начинаю верстать блок тренажерный зал

--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -18,6 +18,8 @@
   &--hero {
     border: 2px solid $color-default-white;
     background-color: transparent;
+    font-size: 12px;
+    line-height: 12px;
   }
 
   &:disabled {
