--- a/source/sass/blocks/main/gym/gym.scss
+++ b/source/sass/blocks/main/gym/gym.scss
@@ -157,6 +157,18 @@
   transform: translate(-50%, -50%);
   cursor: pointer;
   background: linear-gradient(90deg,#ED0233 0, #003EB7 100%);
+
+  &::before {
+    content: "";
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 2px solid $color-torch-red;
+  }
 }
 
 .gym__video-button svg {
@@ -165,3 +177,5 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+
