--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,6 +8,9 @@ $color-default-white:               #ffffff;
 $color-transparent:                 rgba(255, 255, 255, 0);
 $color-sapphire:                    #102654;
 $color-torch-red:                   #ED0233;
+$color-grey-opacity:                rgba(120, 120, 120, 0.20);
+$color-ghost-white:                 #F8F9FC;
+$color-egyptian-blue:               #103AAE;
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
