Добавил разметку секции жюри

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,7 @@
 @import "blocks/main/gym/gym";
 @import "blocks/main/subscription-price/subscription-price";
 @import "blocks/main/subscription-price/price-card";
+@import "blocks/main/games/games";
 
 // ---------------------------------
 
