--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -22,6 +22,15 @@
     line-height: 12px;
   }
 
+  &--games {
+    background-color: transparent;
+    border: 2px solid $color-default-white;
+    align-self: center;
+    justify-content: center;
+    padding-top: 27px;
+    padding-bottom: 27px;
+  }
+
   &:disabled {
     opacity: 0.5;
 
