Добавил секцию жюри

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,8 @@
 @import "blocks/main/subscription-price/subscription-price";
 @import "blocks/main/subscription-price/price-card";
 @import "blocks/main/games/games";
+@import "blocks/main/jury/jury";
+@import "blocks/main/jury/judge-card";
 
 // ---------------------------------
 
