--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,7 @@ $color-torch-red:                   #ED0233;
 $color-grey-opacity:                rgba(120, 120, 120, 0.20);
 $color-ghost-white:                 #F8F9FC;
 $color-egyptian-blue:               #103AAE;
+$color-spindle:                     #B6BDCC;
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
