Добавил разметку блокоа приемущества акции отзовы  форма контакты  футера

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -35,6 +35,8 @@
 @import "blocks/main/games/games";
 @import "blocks/main/jury/jury";
 @import "blocks/main/jury/judge-card";
+@import "blocks/main/advantages/advantages";
+@import "blocks/main/advantages/advantages-card";
 
 // ---------------------------------
 
