--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,6 +12,7 @@ $color-grey-opacity:                rgba(120, 120, 120, 0.20);
 $color-ghost-white:                 #F8F9FC;
 $color-egyptian-blue:               #103AAE;
 $color-spindle:                     #B6BDCC;
+$color-resolution-blue:             #1C3374;
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
