--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -37,6 +37,11 @@
 @import "blocks/main/jury/judge-card";
 @import "blocks/main/advantages/advantages";
 @import "blocks/main/advantages/advantages-card";
+@import "blocks/main/stocks/stocks";
+@import "blocks/main/form-contacts/form-contacts";
+@import "blocks/main/form-contacts/form";
+@import "blocks/main/form-contacts/contacts";
+@import "blocks/main/footer/footer";
 
 // ---------------------------------
 
