--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -13,6 +13,8 @@ $color-ghost-white:                 #F8F9FC;
 $color-egyptian-blue:               #103AAE;
 $color-spindle:                     #B6BDCC;
 $color-resolution-blue:             #1C3374;
+$color-light-slate-grey:            #74819C;
+$color-black-russian:               #030A1A;
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
