Добавил секцию отовы

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,6 +38,8 @@
 @import "blocks/main/advantages/advantages";
 @import "blocks/main/advantages/advantages-card";
 @import "blocks/main/stocks/stocks";
+@import "blocks/main/feedback/feedback";
+@import "blocks/main/feedback/feedback-card";
 @import "blocks/main/form-contacts/form-contacts";
 @import "blocks/main/form-contacts/form";
 @import "blocks/main/form-contacts/contacts";
