--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,6 +9,7 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 $color-sapphire:                    #102654;
 $color-torch-red:                   #ED0233;
 $color-grey-opacity:                rgba(120, 120, 120, 0.20);
+$color-border-grey-opacity:         rgba(16, 38, 84, 0.20);
 $color-ghost-white:                 #F8F9FC;
 $color-egyptian-blue:               #103AAE;
 $color-spindle:                     #B6BDCC;
